# query-nest-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: db_helpers.py  fact_checker.py  llm.py  search_agent.py  state.py  summarizer_agent.py  supervisor.py  writer_agent.py
app/api/: dependencies.py
app/api/routes/: auth.py  history.py  research.py  websocket.py
app/core/: config.py  security.py  stream.py
app/db/: database.py  models.py
app/graph/: builder.py
app/services/: auth_service.py  history_service.py  research_service.py
