[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg==0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.133.1",
    "greenlet>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
