[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg==0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.133.1",
    "greenlet>=3.3.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "sqlmodel>=0.0.37",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
